--- a/home/index.html
+++ b/home/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>My first Vue page</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/pink.css?version=0.1">
 </head>
 <body>
     <header>
@@ -39,6 +40,7 @@
       <div id="app">
         {{ message }} <br>
         {{'Random number: ' + Math.ceil(Math.random()*6) }}
+        <div v-bind:class="vueClass">This element is bound to the "pinkBG" class.</div>
     </div>
     
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
