--- a/home/index.html
+++ b/home/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/flexbox-grid.css?version=0.1">
   <link rel="stylesheet" href="css/pink.css?version=0.1">
+  <link rel="stylesheet" href="css/images.css?version=0.1">
 </head>
 <body>
     <header>
@@ -43,9 +44,18 @@
         {{'Random number: ' + Math.ceil(Math.random()*6) }}
         <div v-bind:class="vueClass">This element is bound to the "pinkBG" class.</div>
     </div>
+
+  <div id="app2">
+  <div>
+    <figure v-for="x in manyFoods">
+      <img v-bind:src="x.url">
+      <figcaption>{{ x.name }}</figcaption>
+    </figure>
+  </div>
     
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="js/vue.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/images.js"></script>
 </body>
 </html>
