--- a/home/index.html
+++ b/home/index.html
@@ -53,6 +53,7 @@
       <figcaption>{{ x.name }}</figcaption>
     </figure>
   </div>
+  </div>
 
     <div id="app3">
   <form v-on:submit.prevent="addItem">
